# wordle-bot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  conanfile.txt  md5.cpp  solve_wordle.cpp
app/: CMakeLists.txt  solve_wordle.cpp
conan/: conanfile.txt
solver/: CMakeLists.txt
solver/include/solver/: A2DD.h  WordleGuesser.h  frequency_solver.h  positional_solver.h  solver.h  solver_benchmark.h  statistics.h  wordle.h  wordle_solver.h  wordle_utils.h
solver/src/: A2DD.cpp  WordleGuesser.cpp  frequency_solver.cpp  positional_solver.cpp  solver.cpp  solver_benchmark.cpp  wordle.cpp  wordle_solver.cpp  wordle_utils.cpp
